--- a/src/app/blog-posts/blog-posts-comments/blog-posts-comments.component.html
+++ b/src/app/blog-posts/blog-posts-comments/blog-posts-comments.component.html
@@ -1,1 +1,5 @@
-<div></div>
+@if (blogpost()) {
+  <app-blog-posts-container [blogpost]=blogpost()!></app-blog-posts-container>
+} @else {
+  <div>No post with provided ID is available</div>
+}
