--- a/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
+++ b/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
@@ -1,9 +1,14 @@
 .blogpost-card {
-  max-width: 500px;
+  max-width: 1000px;
 }
 
 .blogpost-card-img {
   max-width: 50px;
+}
+
+.blogpost-subtitle {
+  padding-left: 16px;
+  padding-bottom: 20px;
 }
 
 .blogpost-content {
