--- a/src/app/blog-posts/blog-posts-root/blog-posts-root.component.html
+++ b/src/app/blog-posts/blog-posts-root/blog-posts-root.component.html
@@ -1,5 +1,5 @@
 <div class="blogposts">
   @for (blogpost of blogPosts(); track blogpost.id) {
-    <app-blog-posts-container class="blogpost-card" [blogpost]=blogpost></app-blog-posts-container>
+    <app-blog-posts-container class="blogpost-card" [expandedMode]="false" [blogpost]=blogpost></app-blog-posts-container>
   }
 </div>
