blogposts: comments page main logic

--- a/src/app/blog-posts/blog-posts-comment/blog-posts-comment.component.html
+++ b/src/app/blog-posts/blog-posts-comment/blog-posts-comment.component.html
@@ -1,6 +1,6 @@
 <mat-card appearance="outlined">
-  <mat-card-header class="comment-header">
-    <mat-card-subtitle>{{ comment.name }} ({{ comment.email }})</mat-card-subtitle>
+  <mat-card-header>
+    <mat-card-subtitle class="comment-header"><mat-icon>supervised_user_circle</mat-icon> {{ comment.name }} ({{ comment.email }})</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content class="comment-content">
     {{ comment.body }}
