--- a/src/app/blog-posts/blog-posts-comments/blog-posts-comments.component.html
+++ b/src/app/blog-posts/blog-posts-comments/blog-posts-comments.component.html
@@ -1,5 +1,5 @@
 @if (blogpost()) {
   <app-blog-posts-container [expandedMode]="true" [blogpost]=blogpost()!></app-blog-posts-container>
 } @else {
-  <div>No post with provided ID is available</div>
+  <div class="popup">No post with provided ID is available</div>
 }
