--- a/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
+++ b/src/app/blog-posts/blog-posts-container/blog-posts-container.component.scss
@@ -9,7 +9,10 @@
 
 .blogpost-subtitle {
   padding-left: 16px;
-  padding-bottom: 20px;
+  max-width: 90%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .blogpost-content {
